demo7/demo-cc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      annotations:
        microsoft.containerinstance.virtualnode.ccepolicy: cGFja2FnZSBwb2xpY3kKCmltcG9ydCBmdXR1cmUua2V5d29yZHMuZXZlcnkKaW1wb3J0IGZ1dHVyZS5rZXl3b3Jkcy5pbgoKYXBpX3ZlcnNpb24gOj0gIjAuMTAuMCIKZnJhbWV3b3JrX3ZlcnNpb24gOj0gIjAuMi4zIgoKZnJhZ21lbnRzIDo9IFsKICB7CiAgICAiZmVlZCI6ICJtY3IubWljcm9zb2Z0LmNvbS9hY2kvYWNpLWNjLWluZnJhLWZyYWdtZW50IiwKICAgICJpbmNsdWRlcyI6IFsKICAgICAgImNvbnRhaW5lcnMiLAogICAgICAiZnJhZ21lbnRzIgogICAgXSwKICAgICJpc3N1ZXIiOiAiZGlkOng1MDk6MDpzaGEyNTY6SV9faXVMMjVvWEVWRmRUUF9hQkx4X2VUMVJQSGJDU [...]
        microsoft.containerinstance.virtualnode.injectdns: 'false'
        prometheus.io/path: /metrics
        prometheus.io/port: '8081'
        prometheus.io/scrape: 'true'
      labels:
        app: demo
        azure.workload.identity/use: 'true'
    spec:
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        image: huntersharedcr.azurecr.io/hunter-demo2:0.1
        imagePullPolicy: Always
        name: demo-app
        ports:
        - containerPort: 8081
      nodeSelector:
        virtualization: virtualnode2
      serviceAccountName: demo-sa
      tolerations:
      - effect: NoSchedule
        key: virtual-kubelet.io/provider
        operator: Exists
---
apiVersion: v1
kind: Service
metadata:
  name: demo-srv
spec:
  # type: LoadBalancer
  type: ClusterIP
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 8081
