demo7/demo7-cc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo7-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo7
  template:
    metadata:
      labels:
        app: demo7
        azure.workload.identity/use: 'true'
      annotations:
        microsoft.containerinstance.virtualnode.ccepolicy: cGFja2FnZSBwb2xpY3kKCmltcG9ydCBmdXR1cmUua2V5d29yZHMuZXZlcnkKaW1wb3J0IGZ1dHVyZS5rZXl3b3Jkcy5pbgoKYXBpX3ZlcnNpb24gOj0gIjAuMTAuMCIKZnJhbWV3b3JrX3ZlcnNpb24gOj0gIjAuMi4zIgoKZnJhZ21lbnRzIDo9IFsKICB7CiAgICAiZmVlZCI6ICJtY3IubWljcm9zb2Z0LmNvbS9hY2kvYWNpLWNjLWluZnJhLWZyYWdtZW50IiwKICAgICJpbmNsdWRlcyI6IFsKICAgICAgImNvbnRhaW5lcnMiLAogICAgICAiZnJhZ21lbnRzIgogICAgXSwKICAgICJpc3N1ZXIiOiAiZGlkOng1MDk6MDpzaGEyNTY6SV9faXVMMjVvWEVWRmRUUF9hQkx4X2VUMVJQSGJDU [...]
        microsoft.containerinstance.virtualnode.injectdns: 'false'
        prometheus.io/path: /metrics
        prometheus.io/port: '8081'
        prometheus.io/scrape: 'true'
    spec:
      serviceAccountName: demo7-sa
      nodeSelector:
        virtualization: virtualnode2
      tolerations:
        - effect: NoSchedule
          key: virtual-kubelet.io/provider
          operator: Exists
      containers:
        - name: demo7-app
          image: hunterdemo7cr.azurecr.io/hunter-demo7:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: demo7-srv
spec:
  type: ClusterIP
  selector:
    app: demo7
  ports:
    - port: 80
      targetPort: 8081
