demo7/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo7-ing
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo7-srv
                port:
                  number: 80
          - path: /dotnet
            pathType: Prefix
            backend:
              service:
                name: dotnet-srv
                port:
                  number: 80
          - path: /api/hello
            pathType: Exact
            backend:
              service:
                name: azfunc-srv
                port:
                  number: 80
          - path: /skr
            pathType: Prefix
            backend:
              service:
                name: demo7-skr-srv
                port:
                  number: 80
