demo7/vn2.yaml
---
# Source: virtualnode2/templates/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vn2
---
# Source: virtualnode2/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: virtual-node-admission-controller
  namespace: vn2
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 19865
  selector:
    app.kubernetes.io/name: "admissioncontroller"
    app.kubernetes.io/instance: hunter-test2
  type: ClusterIP
---
# Source: virtualnode2/templates/admissioncontroller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "virtual-node-admission-controller"
  namespace: vn2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "admissioncontroller"
      app.kubernetes.io/instance: hunter-test2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "admissioncontroller"
        app.kubernetes.io/instance: hunter-test2
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName:  "hunter-test2-virtualnode2-virtual-node2-helm" 
      containers:
        - name: admissioncontroller
          image: mcr.microsoft.com/aci/virtual-node-2-admission-controller:main_20240920.2
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      nodeSelector:
        kubernetes.io/os: linux
---
# Source: virtualnode2/templates/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hunter-test2-virtualnode2
  namespace: vn2
  labels:
    helm.sh/chart: virtualnode2-0.0.2
    app.kubernetes.io/name: virtualnode2
    app.kubernetes.io/instance: hunter-test2
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: virtualnode2
      app.kubernetes.io/instance: hunter-test2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: virtualnode2
        app.kubernetes.io/instance: hunter-test2
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName:  "hunter-test2-virtualnode2-virtual-node2-helm" 
      securityContext:
        {}
      containers:
        - name: kubelet
          resources:
            requests:
              cpu: 1
              memory: 4G
            limits:
              cpu: 3
              memory: 12G
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
            privileged: true
          image: mcr.microsoft.com/aci/virtual-node-2-kubelet:main_20240920.2
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/kubelet/
              name: kubelet-root-dir
              mountPropagation: Bidirectional
            - mountPath: /tmp/
              name: socket-volume
            - mountPath: /kubeconfig/
              name: kube-config-volume
            - mountPath: /etc/aks/azure.json
              name: aks-credential
            - mountPath: /etc/ssl/certs/ca-certificates.crt
              name: ca-certificates
            - mountPath: /var/log/pods
              name: container-logs
          command:
            - sh
            - '-c'
            - >-            
              [...]
          resources: {}
        - name: virtualcsi
          resources:
            requests:
              cpu: 0
              memory: 0G
            limits:
              cpu: 3
              memory: 12G
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
            privileged: true
          image: mcr.microsoft.com/aci/virtual-node-2-virtual-csi:main_20240920.2
          command:
            - /go/bin/virtual-csi
          args:
            - >-
              -endpoint=unix:///var/lib/kubelet/plugins/file.csi.azure.com/csi.sock
          imagePullPolicy: Always
          volumeMounts:
            - name: kubelet-root-dir
              mountPath: /var/lib/kubelet
        - name: crisocketotcpadapter
          resources:
            requests:
              cpu: 0
              memory: 0G
            limits:
              cpu: 3
              memory: 12G
          image: mcr.microsoft.com/aci/virtual-node-2-cri-socket-adapter:main_20240920.2
          volumeMounts:
            - name: socket-volume
              mountPath: /tmp/
            - name: aks-credential
              mountPath: /etc/aks/azure.json
            - name: kubelet-root-dir
              mountPath: /kubelet/
            - name: container-logs
              mountPath: /var/log/pods
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
        - name: proxycri
          resources:
            requests:
              cpu: 2
              memory: 8G
            limits:
              cpu: 3
              memory: 12G
          image: mcr.microsoft.com/aci/virtual-node-2-proxy-cri:main_20240920.2
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
            privileged: true
          volumeMounts:
            - name: socket-volume
              mountPath: /tmp/
            - name: aks-credential
              mountPath: /etc/aks/azure.json
            - name: kubelet-root-dir
              mountPath: /var/lib/kubelet/
              mountPropagation: Bidirectional
            - name: container-logs
              mountPath: /var/log/pods
            - mountPath: /kubeconfig/
              name: kube-config-volume   
        - name: node-driver-registrar
          resources:
            requests:
              cpu: 0
              memory: 0G
            limits:
              cpu: 3
              memory: 12G
          image: mcr.microsoft.com/oss/kubernetes-csi/csi-node-driver-registrar:v2.8.0
          imagePullPolicy: Always
          volumeMounts:
            - name: kubelet-root-dir
              mountPath: /var/lib/kubelet/
            - name: kubelet-root-dir
              mountPath: /registration
              subPath: plugins_registry
          args: 
            - "--csi-address=$(ADDRESS)"
            - "--kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)"
            - "--v=2"
      volumes:
        - name: kubelet-root-dir
          emptyDir:
            medium: Memory
        - name: socket-volume
          emptyDir: {}
        - name: kube-config-volume
          emptyDir: {}
        - name: container-logs
          emptyDir: {}
        - name: ca-certificates
          hostPath:
            path: /etc/ssl/certs/ca-certificates.crt
            type: File
        - name: aks-credential
          hostPath:
            path: /etc/kubernetes/azure.json
            type: File
        - name: credentials
          secret:
            secretName: virtual-node-admission-controller
            defaultMode: 420
      nodeSelector:
        kubernetes.io/os: linux
  podManagementPolicy: "Parallel"
---
# Source: virtualnode2/templates/webhook.yaml
# If admission controller replica count is set to 0, don't create the webhook
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: virtual-node-admission-controller
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: virtual-node-admission-controller
      namespace: vn2
      path: "/node"
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: virtual-node-admission-controller-node-mutating-webhook.azmk8s.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ''
    apiVersions:
    - v1
    operations:
    - "*"
    resources:
    - nodes
    - nodes/status
    scope: "*"
  sideEffects: NoneOnDryRun
  timeoutSeconds: 5
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: virtual-node-admission-controller
      namespace: vn2
      path: "/pod"
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: virtual-node-admission-controller-pod-mutating-webhook.azmk8s.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ''
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    scope: "*"
  sideEffects: NoneOnDryRun
  timeoutSeconds: 5
